Began work on c2m3 Completed work on c2m2 Some dead center tweaks Adjusted ladder prop on c2m1 Removed some unnecessary headers from template

--- a/_Templates/entity_template.cfg
+++ b/_Templates/entity_template.cfg
@@ -115,7 +115,7 @@ modify:
 "[Output named]" "[Target entities named][Via this input]0-1"
 
 ; --- Method for removing _commentary.txt / lump / anv_mapfixes.nut entities
-; --- as they are spawned after the map is loaded they need to remove after a delay
+; --- As they are spawned after the map is loaded they need to remove after a delay
 ; --- Use info_gamemode to do this on a delay after the map has loaded, and to specify the desired gamemode
 modify:
 {
