--- a/_Templates/stripper_template.cfg
+++ b/_Templates/stripper_template.cfg
@@ -1,17 +1,12 @@
 ; ############  DIRECTOR AND EVENT CHANGES  ###########
 ; =====================================================
 ; ==              DIRECTOR MODIFICATION              ==
-; ==    Modify director scripts and event scripts    ==
+; ==  Modify director and event scripts, tank spawns ==
 ; =====================================================
 
 ; =====================================================
 ; ==                EVENT MODIFICATION               ==
 ; ==       Modify event layout or functionality      ==
-; =====================================================
-
-; =====================================================
-; ==             TANK SPAWN MODIFICATION             ==
-; ==        Add or modify tank spawns position       ==
 ; =====================================================
 
 
@@ -68,11 +63,6 @@
 ; =====================================================
 ; ==                   LADDER NERF                   ==
 ; ==         Nerf ladder attacks for infected        ==
-; =====================================================
-
-; =====================================================
-; ==                     LOS FIX                     ==
-; ==     Fixes for line-of-sight issues on props     ==
 ; =====================================================
 
 
