--- a/cfg/stripper/maps/c1m1_hotel.cfg
+++ b/cfg/stripper/maps/c1m1_hotel.cfg
@@ -1,7 +1,7 @@
 ; ############  DIRECTOR AND EVENT CHANGES  ###########
 ; =====================================================
 ; ==              DIRECTOR MODIFICATION              ==
-; ==    Modify director scripts and event scripts    ==
+; ==  Modify director and event scripts, tank spawns ==
 ; =====================================================
 
 ; =====================================================
@@ -20,11 +20,6 @@ modify:
 		"OnTrigger" "elevator_door_button1Press34-1"
 	}
 }
-
-; =====================================================
-; ==             TANK SPAWN MODIFICATION             ==
-; ==        Add or modify tank spawns position       ==
-; =====================================================
 
 
 ; ################  ITEM SPAWN CHANGES  ###############
@@ -56,6 +51,7 @@ add:
 	"origin" "675 5683 2699"
 	"angles" "0 150 90"
 }
+; --- Single pickup T1s on the cleaning cart around the corner in the first hallway
 {
 	"classname" "weapon_smg"
 	"origin" "1679 5813 2699"
@@ -435,11 +431,6 @@ add:
 ; =====================================================
 ; ==                   LADDER NERF                   ==
 ; ==         Nerf ladder attacks for infected        ==
-; =====================================================
-
-; =====================================================
-; ==                     LOS FIX                     ==
-; ==     Fixes for line-of-sight issues on props     ==
 ; =====================================================
 
 
