--- a/cfg/stripper/maps/c1m2_streets.cfg
+++ b/cfg/stripper/maps/c1m2_streets.cfg
@@ -1,7 +1,7 @@
 ; ############  DIRECTOR AND EVENT CHANGES  ###########
 ; =====================================================
 ; ==              DIRECTOR MODIFICATION              ==
-; ==    Modify director scripts and event scripts    ==
+; ==  Modify director and event scripts, tank spawns ==
 ; =====================================================
 ; --- Remove the ambush trigger before the walkway that makes the director only spawn chargers
 ; --- With the removal of the trigger that sets the director to it's pre-event state after the walkway, this remains on until the event starts
@@ -94,25 +94,6 @@ add:
 	"fademindist" "-1"
 	"disablereceiveshadows" "0"
 }
-; --- UNCOMMENT TO ENABLE
-; --- Movable shopping cart in the left corner as a slightly faster way back up
-;{
-;	"classname" "prop_physics"
-;	"origin" "-6075 -1954 462"
-;	"angles" "0 270 -161.5"
-;	"model" "models/props_urban/shopping_cart001.mdl"
-;	"solid" "6"
-;	"disableshadows" "1"
-;}
-; --- Clip to make jumping from the cart onto the fence possible
-;{
-;	"classname" "env_physics_blocker"
-;	"origin" "-6136 -1937 436"
-;	"mins" "-104 -0.5 -44"
-;	"maxs" "104 0.5 44"
-;	"initialstate" "1"
-;	"BlockType" "0"
-;}
 ; --- Shopping cart alternative to stairs at the event
 {
 	"classname" "prop_physics"
@@ -122,11 +103,6 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
-
-; =====================================================
-; ==             TANK SPAWN MODIFICATION             ==
-; ==        Add or modify tank spawns position       ==
-; =====================================================
 
 
 ; ################  ITEM SPAWN CHANGES  ###############
@@ -377,7 +353,7 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 }
-; --- Block climbing up the generator
+; --- Block climbing up the generator at the start
 {
 	"classname" "env_physics_blocker"
 	"origin" "1533 2591 713"
@@ -486,6 +462,15 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 }
+; --- Block climbing up the generators before the walkway
+{
+	"classname" "env_physics_blocker"
+	"origin" "-4996 1632 483"
+	"mins" "-4.5 -7 -98"
+	"maxs" "4.5 7 98"
+	"initialstate" "1"
+	"BlockType" "1"
+}
 ; --- Block standing on the highway sign after the one way drop
 {
 	"classname" "env_physics_blocker"
@@ -522,18 +507,44 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 }
+; --- Block climbing up the 2 generators at the end
+{
+	"classname" "env_physics_blocker"
+	"origin" "-8683 -3991 525"
+	"mins" "-6.5 -7 -143"
+	"maxs" "6.5 7 143"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-7163 -4158 528"
+	"mins" "-7 -5.5 -143"
+	"maxs" "7 5.5 143"
+	"initialstate" "1"
+	"BlockType" "1"
+}
 
 ; =====================================================
 ; ==                  OUT OF BOUNDS                  ==
 ; ==  Block players getting outside / under the map  ==
 ; =====================================================
 add:
+; --- Block players getting out of the map above the start saferoom
+{
+	"classname" "env_physics_blocker"
+	"origin" "1792 7168 2096"
+	"mins" "-2304 -1024 -208"
+	"maxs" "2304 1024 208"
+	"initialstate" "1"
+	"BlockType" "0"
+}
 ; --- Block infected going too far out of bounds at the back of the underpass street
 {
 	"classname" "env_physics_blocker"
-	"origin" "-1408 6672 824"
-	"mins" "-384 -1520 -648"
-	"maxs" "384 1520 648"
+	"origin" "-896 6176 896"
+	"mins" "-896 -32 -576"
+	"maxs" "896 32 576"
 	"initialstate" "1"
 	"BlockType" "2"
 }
@@ -953,11 +964,6 @@ add:
 ; ==         Nerf ladder attacks for infected        ==
 ; =====================================================
 
-; =====================================================
-; ==                     LOS FIX                     ==
-; ==     Fixes for line-of-sight issues on props     ==
-; =====================================================
-
 
 ; ############  MAP SOUND AND GFX CHANGES  ############
 ; =====================================================
@@ -1000,6 +1006,8 @@ modify:
 		; --- At the left end of the street by the starting saferoom
 		"OnVersusPostIO" "anv_mapfixes_yeswaycorner_clipKill10-1"
 		"OnVersusPostIO" "anv_mapfixes_yeswaycorner_wrongwayKill10-1"
+		; --- At the back of the underpass street by the white van
+		"OnVersusPostIO" "anv_mapfixes_clipgap_deadendfenceKill10-1"
 		; --- Area above the underpass, by the billboard and bridge
 		"OnVersusPostIO" "anv_mapfixes_yeswayturnpike_clipaKill10-1"
 		"OnVersusPostIO" "anv_mapfixes_yeswayturnpike_clipbKill10-1"
@@ -1067,6 +1075,17 @@ add:
 	"angles" "0 0 0"
 	"model" "*38"
 	"normal.x" "-1.00"
+	"normal.y" "0.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+; --- Infected ladder to get out of the out-of-bounds area at the back of the underpass
+{
+	"classname" "func_simpleladder"
+	"origin" "1022 7414 35.5"
+	"angles" "0 90 0"
+	"model" "*88"
+	"normal.x" "1.00"
 	"normal.y" "0.00"
 	"normal.z" "0.00"
 	"team" "2"
