--- a/cfg/stripper/maps/c1m3_mall.cfg
+++ b/cfg/stripper/maps/c1m3_mall.cfg
@@ -1,7 +1,7 @@
 ; ############  DIRECTOR AND EVENT CHANGES  ###########
 ; =====================================================
 ; ==              DIRECTOR MODIFICATION              ==
-; ==    Modify director scripts and event scripts    ==
+; ==  Modify director and event scripts, tank spawns ==
 ; =====================================================
 
 ; =====================================================
@@ -64,7 +64,7 @@ filter:
 {
 	"hammerid" "221997"
 }
-; --- Close a ajar door before the store
+; --- Close the partially door before the store
 modify:
 {
 	match:
@@ -94,7 +94,6 @@ add:
 	; --- Saferoom - Upper floor - Spawn standard versus path
 	"OnTrigger" "escalator_upper_03*FireUser10-1"
 }
-; --- Force the 2 escalators on the ground floor to always spawn
 modify:
 {
 	match:
@@ -169,11 +168,6 @@ filter:
 	"hammerid" "1551926"
 }
 
-; =====================================================
-; ==             TANK SPAWN MODIFICATION             ==
-; ==        Add or modify tank spawns position       ==
-; =====================================================
-
 
 ; ################  ITEM SPAWN CHANGES  ###############
 ; =====================================================
@@ -221,15 +215,7 @@ modify:
 ; ==      Block intentionally performed exploits     ==
 ; =====================================================
 add:
-; --- Block standing on the door frames by the drop leading to the event
-{
-	"classname" "env_physics_blocker"
-	"origin" "1695 -1056 455"
-	"mins" "-1 -64 -57.5"
-	"maxs" "1 64 57.5"
-	"initialstate" "1"
-	"BlockType" "1"
-}
+; --- Block standing on a door frame by the drop leading to the event
 {
 	"classname" "env_physics_blocker"
 	"origin" "1509 -993 466"
@@ -396,11 +382,6 @@ add:
 ; =====================================================
 ; ==                   LADDER NERF                   ==
 ; ==         Nerf ladder attacks for infected        ==
-; =====================================================
-
-; =====================================================
-; ==                     LOS FIX                     ==
-; ==     Fixes for line-of-sight issues on props     ==
 ; =====================================================
 
 
