--- a/cfg/stripper/maps/c1m4_atrium.cfg
+++ b/cfg/stripper/maps/c1m4_atrium.cfg
@@ -1,17 +1,7 @@
 ; ############  DIRECTOR AND EVENT CHANGES  ###########
 ; =====================================================
 ; ==              DIRECTOR MODIFICATION              ==
-; ==    Modify director scripts and event scripts    ==
-; =====================================================
-
-; =====================================================
-; ==                EVENT MODIFICATION               ==
-; ==       Modify event layout or functionality      ==
-; =====================================================
-
-; =====================================================
-; ==             TANK SPAWN MODIFICATION             ==
-; ==        Add or modify tank spawns position       ==
+; ==  Modify director and event scripts, tank spawns ==
 ; =====================================================
 ; --- Spawn tank at 29 seconds (just as the elevator opens) - This freezes the finale while giving teams a chance complete the elevator attack
 modify:
@@ -47,6 +37,11 @@ add:
 	"targetname" "tank_wrongway"
 	"StartDisabled" "1"
 }
+
+; =====================================================
+; ==                EVENT MODIFICATION               ==
+; ==       Modify event layout or functionality      ==
+; =====================================================
 
 
 ; ################  ITEM SPAWN CHANGES  ###############
@@ -92,7 +87,7 @@ add:
 ; ==      Clipping improvements, QOL map changes     ==
 ; =====================================================
 add:
-; --- Block gas cans from ending up in unreachable locations - This also blocks players
+; --- Block gas cans (and players) from ending up in unreachable locations
 ; --- Lower Floor
 ; --- Re-opening Construction
 {
@@ -275,11 +270,6 @@ add:
 ; =====================================================
 ; ==                   LADDER NERF                   ==
 ; ==         Nerf ladder attacks for infected        ==
-; =====================================================
-
-; =====================================================
-; ==                     LOS FIX                     ==
-; ==     Fixes for line-of-sight issues on props     ==
 ; =====================================================
 
 
