--- a/cfg/stripper/maps/c2m1_highway.cfg
+++ b/cfg/stripper/maps/c2m1_highway.cfg
@@ -1,17 +1,12 @@
 ; ############  DIRECTOR AND EVENT CHANGES  ###########
 ; =====================================================
 ; ==              DIRECTOR MODIFICATION              ==
-; ==    Modify director scripts and event scripts    ==
+; ==  Modify director and event scripts, tank spawns ==
 ; =====================================================
 
 ; =====================================================
 ; ==                EVENT MODIFICATION               ==
 ; ==       Modify event layout or functionality      ==
-; =====================================================
-
-; =====================================================
-; ==             TANK SPAWN MODIFICATION             ==
-; ==        Add or modify tank spawns position       ==
 ; =====================================================
 
 
@@ -1008,11 +1003,6 @@ add:
 ; ==         Nerf ladder attacks for infected        ==
 ; =====================================================
 
-; =====================================================
-; ==                     LOS FIX                     ==
-; ==     Fixes for line-of-sight issues on props     ==
-; =====================================================
-
 
 ; ############  MAP SOUND AND GFX CHANGES  ############
 ; =====================================================
@@ -1086,20 +1076,28 @@ add:
 ; --- Prop for ladder
 {
 	"classname" "prop_dynamic"
-	"origin" "2730 3134 -745"
+	"origin" "2730 3134 -649"
 	"angles" "0 0 0"
 	"model" "models/props_rooftop/gutter_pipe_256.mdl"
 	"solid" "0"
 	"disableshadows" "1"
 }
-; --- Block for survivors
+{
+	"classname" "prop_dynamic"
+	"origin" "2730 3134 -905"
+	"angles" "0 0 0"
+	"model" "models/props_rooftop/gutter_pipe_256.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+}
+; --- Block part of pipe without a ladder
 {
 	"classname" "env_physics_blocker"
-	"origin" "2730 3130 -698"
-	"mins" "-13 -6 -50"
-	"maxs" "13 6 50"
+	"origin" "2730 3130 -695"
+	"mins" "-15 -4.5 -47"
+	"maxs" "15 4.5 47"
 	"initialstate" "1"
-	"BlockType" "1"
+	"BlockType" "0"
 }
 ; --- Infected ladder to stop players getting stuck behind debris after the drop
 {
