Completed work on c2m3 Tweaked wrong ways on c2m2 Blocked some out of bounds spots on c2m1 Changed cart on c1m2 to a crate

--- a/cfg/stripper/maps/c1m2_streets.cfg
+++ b/cfg/stripper/maps/c1m2_streets.cfg
@@ -94,12 +94,12 @@ add:
 	"fademindist" "-1"
 	"disablereceiveshadows" "0"
 }
-; --- Shopping cart alternative to stairs at the event
+; --- Crate as an alternative to climbing the stairs at the gun store exit
 {
-	"classname" "prop_physics"
-	"origin" "-5924 -2651 490"
-	"angles" "0 180 -171"
-	"model" "models/props_urban/shopping_cart001.mdl"
+	"classname" "prop_dynamic"
+	"origin" "-5915 -2667 442"
+	"angles" "0 90 -8.5"
+	"model" "models/props_crates/static_crate_40.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 }
