--- a/cfg/stripper/maps/c1m3_mall.cfg
+++ b/cfg/stripper/maps/c1m3_mall.cfg
@@ -64,7 +64,7 @@ filter:
 {
 	"hammerid" "221997"
 }
-; --- Close the partially door before the store
+; --- Close the partially open door before the store
 modify:
 {
 	match:
