--- a/cfg/stripper/maps/c2m1_highway.cfg
+++ b/cfg/stripper/maps/c2m1_highway.cfg
@@ -451,6 +451,36 @@ filter:
 ; ==                  OUT OF BOUNDS                  ==
 ; ==  Block players getting outside / under the map  ==
 ; =====================================================
+add:
+; --- Block an out of bounds spot on the left of the final hill behind the fences
+{
+	"classname" "env_physics_blocker"
+	"origin" "1904 -369 -800"
+	"mins" "-208 -240 -544"
+	"maxs" "208 240 544"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "1967 -161 -800"
+	"angles" "0 17 0"
+	"mins" "-175 -100 -544"
+	"maxs" "175 100 544"
+	"boxmins" "-175 -100 -544"
+	"boxmaxs" "175 100 544"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+; --- Block survivors from getting out of bounds behind a hedge by the outhouse before the final hill
+{
+	"classname" "env_physics_blocker"
+	"origin" "-2164 2097 -1236"
+	"mins" "-44 -24 -420"
+	"maxs" "44 24 420"
+	"initialstate" "1"
+	"BlockType" "1"
+}
 
 ; =====================================================
 ; ==                   STUCK SPOTS                   ==
