--- a/cfg/stripper/maps/c2m2_fairgrounds.cfg
+++ b/cfg/stripper/maps/c2m2_fairgrounds.cfg
@@ -817,19 +817,23 @@ add:
 ; --- Wrong way signs for the skybox in the area at the back of kiddyland
 {
 	"classname" "prop_dynamic"
-	"origin" "-448 1723 9"
-	"angles" "0 0 0"
-	"model" "models/props_placeable/wrong_way.mdl"
+	"origin" "-449 1723 53"
+	"angles" "0 180 0"
+	"model" "models/props_misc/wrongway_sign01_optimized.mdl"
 	"solid" "0"
 	"disableshadows" "1"
+	"fademindist" "200"
+	"fademaxdist" "300"
 }
 {
 	"classname" "prop_dynamic"
-	"origin" "-512 2139 9"
-	"angles" "0 0 0"
-	"model" "models/props_placeable/wrong_way.mdl"
+	"origin" "-513 2139 53"
+	"angles" "0 180 0"
+	"model" "models/props_misc/wrongway_sign01_optimized.mdl"
 	"solid" "0"
 	"disableshadows" "1"
+	"fademindist" "200"
+	"fademaxdist" "300"
 }
 ; --- Allow ghost infected to pass through the breakable walls at the event
 modify:
