Started work on c2m4 Modified elevator section on c1m1 Tweaks to post one way drop on c1m2 Opened up a new area on c2m2 from the cut scavenge map Improved LOS blocking on signs on c2m2 Updated entity template with item spawns and func_brush functions Added add: functions to entity template for clarity Make porta potty doors breakable globally Added last stand to map info

--- a/_Templates/entity_template.cfg
+++ b/_Templates/entity_template.cfg
@@ -3,6 +3,7 @@
 ; #################  PLAYER BLOCKERS  #################
 ; --- Types: 0 = Everyone, 1 = Survivors, 2 = Player Infected
 ; --- 3 = All Special Infected (Player and AI), 4 = All players and physics objects
+add:
 {
 	"classname" "env_physics_blocker"
 	"origin" "[x y z]"
@@ -14,6 +15,7 @@
 ; --- With angles
 ; --- Values from the rotation (CTRL + M) menu in hammer are shifted by 1 place: Hammer -> Stripper
 ; --- X -> R  /  Y -> P  /  Z -> Y
+add:
 {
 	"classname" "env_physics_blocker"
 	"origin" "[x y z]"
@@ -28,6 +30,7 @@
 
 ; ######################  ITEMS  ######################
 ; --- Props
+add:
 {
 	"classname" "prop_dynamic"
 	"origin" "[x y z]"
@@ -37,6 +40,7 @@
 	"disableshadows" "1"
 }
 ; --- Ammo Piles
+add:
 {
 	"classname" "weapon_ammo_spawn"
 	"origin" "[x y z]"
@@ -61,6 +65,7 @@ modify:
 }
 ; --- Weapon Spawns - Any weapon type/Standard spawn
 ; --- NOTE: Count value does not affect versus - weapons are always infinite
+add:
 {
 	"classname" "weapon_spawn"
 	"origin" "[x y z]"
@@ -74,12 +79,15 @@ modify:
 }
 ; --- Single Pickup Weapon Only
 ; --- NOTE: CAN be used for single pickup weapons in versus
+add:
 {
 	"classname" "[weapon type]"
 	"origin" "[x y z]"
 	"angles" "[p y r]"
 }
 ; --- Melee Weapons
+; --- NOTE: Use "any" for a random melee weapon
+add:
 {
 	"classname" "weapon_melee_spawn"
 	"origin" "[x y z]"
@@ -91,28 +99,66 @@ modify:
 	"spawnflags" "2"
 	"count" "1"
 }
+; --- Item spawns -----------Pain Pills
+; --- NOTE: Setting "spawnflags" to "2" will cause the item to ALWAYS spawn, not advised
+add:
+{
+	"classname" "weapon_pain_pills_spawn"
+	"origin" "[x y z]"
+	"angles" "[p y r]"
+}
 
 ; #####################  LADDERS  #####################
 ; --- Add infected ladders by duplicating an existing ladder
 ; --- Ordering of normals has been corrected to X Y Z, previous ladder implementations were ordered as Z Y X 
 ; --- Survivor ladders can also be duplicated using team valve of 0, though they are not visible or climbable during the duplication, they will function when loaded via Stripper
+add:
 {
 	"classname" "func_simpleladder"
 	"origin" "[x y z]"
 	"angles" "[p y r]"
-	"model" "*[model number]"
+	"model" "*[brush number]"
 	"normal.x" "[x.00]"
 	"normal.y" "[y.00]"
 	"normal.z" "[z.00]"
 	"team" "2"
 }
 
+; #####################  BRUSHES  #####################
+; --- Create custom sized brushes by using a logic_auto to fire outputs for parameters
+; --- "func_brush" entities are solid and can be used to block LOS, "func_nav_blocker" can be used to block navs
+; --- Prefixing the name with "anv_mapfixes_losfix_" allows func_brush entities to be displayed with ShowUpdate()
+; --- NOTE: It is NOT possible to rotate these brushes, the collision types that would allow it do not work for bounding boxed brushes
+; --- NOTE: If players can collide with the brush it is recommended to create a physics clip around it for better collision
+add:
+{
+	"classname" "logic_auto"
+	"OnMapSpawn" "anv_mapfixes_losfix_[brush name]AddOutputmins [-x -y -z]0-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_[brush name]AddOutputmaxs [x y z]0-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_[brush name]AddOutputsolid 20-1"
+}
+{
+	"classname" "[brush type]"
+	"origin" "[x y z]"
+	"targetname" "anv_mapfixes_losfix_[brush name]"
+}
+; --- Cloning an existing brush to create new brush entities
+; --- Entity specific parameters can be added from here
+; --- This is the same method of using pre-cached brushes that allows ladders to be cloned
+add:
+{
+	"classname" "[brush type]"
+	"origin" "[x y z]"
+	"angles" "[p y r]"
+	"model" "*[brush number]"
+}
+
 ; ####################  I/O LOGIC  ####################
 ; --- Template for modifying entity input/output logic
 ; --- All parameters
-"[Output named]" "[Target entities named][Via this input][Parameter override][Delay in seconds][Trigger only once]"
+"[output named]" "[target entities named][via this input][parameter override][delay in seconds][trigger only once]"
 ; --- No parameter override, no delay, allow triggering more than once (default)
-"[Output named]" "[Target entities named][Via this input]0-1"
+"[output named]" "[target entities named][via this input]0-1"
 
 ; --- Method for removing _commentary.txt / lump / anv_mapfixes.nut entities
 ; --- As they are spawned after the map is loaded they need to remove after a delay
@@ -125,6 +171,6 @@ modify:
 	}
 	insert:
 	{
-		"OnVersusPostIO" "[Entity targetname or classname]Kill10-1"
+		"OnVersusPostIO" "[entity targetname or classname]Kill10-1"
 	}
 }
