--- a/cfg/stripper/global_filters.cfg
+++ b/cfg/stripper/global_filters.cfg
@@ -21,8 +21,8 @@ modify:
 }
 
 ; =====================================================
-; ==              PILL CABINET OVERRIDE              ==
-; ==              Pill cabinet max items             ==
+; ==            PILL CABINET MAX OVERRIDE            ==
+; ==              Pill cabinet max pills             ==
 ; =====================================================
 ; --- Limit pill cabinets to a max of 2 pills
 ; --- This can be manually overridden on each map, as global filters runs first
@@ -35,5 +35,37 @@ modify:
 	replace:
 	{
 		"HealthCount" "2"
+	}
+}
+
+; =====================================================
+; ==               PORTA POTTY DOOR FIX              ==
+; ==         Make porta potty doors breakable        ==
+; =====================================================
+modify:
+; --- Flags for starting closed
+{
+	match:
+	{
+		"classname" "prop_door_rotating"
+		"model" "models/props_urban/outhouse_door001.mdl"
+		"spawnflags" "532480"
+	}
+	replace:
+	{
+		"spawnflags" "8192"
+	}
+}
+; --- Flags for starting open
+{
+	match:
+	{
+		"classname" "prop_door_rotating"
+		"model" "models/props_urban/outhouse_door001.mdl"
+		"spawnflags" "532481"
+	}
+	replace:
+	{
+		"spawnflags" "8193"
 	}
 }
