--- a/cfg/stripper/maps/c1m1_hotel.cfg
+++ b/cfg/stripper/maps/c1m1_hotel.cfg
@@ -8,7 +8,99 @@
 ; ==                EVENT MODIFICATION               ==
 ; ==       Modify event layout or functionality      ==
 ; =====================================================
-; --- Force the elevator doors to open after 30 seconds after reaching the ground floor (once the door becomes usable)
+; --- Make survivors have to call the elevator to the top before going to the ground floor
+; --- Fake the elevator moving with visuals and sounds
+; --- Remove logic_auto that opens the elevator doors on map spawn
+filter:
+{
+	"hammerid" "1227763"
+}
+; --- Remove existing button as there are 2 buttons with the same targetname
+{
+	"hammerid" "329945"
+	"targetname" "elevbuttonoutsidefront"
+}
+; --- Create the new elevator button
+add:
+{
+	"classname" "prop_dynamic"
+	"origin" "2048 5696 2516.17"
+	"angles" "0 270 0"
+	"model" "models/props_equipment/elevator_buttons.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"targetname" "call_elevator_button_prop"
+	"fadescale" "0"
+	"glowrange" "1000"
+}
+{
+	"classname" "func_button"
+	"origin" "2048 5706 2884.89"
+	"model" "*5"
+	"spawnflags" "1025"
+	"targetname" "call_elevator_button"
+	"wait" "-1"
+	"sounds" "32"
+	; --- Disable glow
+	"OnPressed" "call_elevator_button_propStopGlowing0-1"
+	; --- Button and elevator lights
+	"OnPressed" "call_elevator_button_propSkin10-1"
+	"OnPressed" "call_elevator_button_propSkin00.3-1"
+	"OnPressed" "call_elevator_lightsSkin10.5-1"
+	; --- Elevator moving sound
+	"OnPressed" "elevator_movement_soundPlaySound2-1"
+	; --- Survivors call out pressing the button
+	"OnPressed" "!activatorSpeakResponseConceptc4m2_elevator_top_button0-1"
+	; --- Start panic event
+	"OnPressed" "directorForcePanicEvent3-1"
+	; --- Elevator opens after ~30 seconds
+	"OnPressed" "call_elevator_relayTrigger34-1"
+}
+; --- Create a relay for handling elevator arrival
+{
+	"classname" "logic_relay"
+	"origin" "2035 5661 2473"
+	"targetname" "call_elevator_relay"
+	; --- Button and elevator lights
+	"OnTrigger" "call_elevator_lightsSkin04-1"
+	; --- Stop elevator moving sound
+	"OnTrigger" "elevator_movement_soundStopSound0-1"
+	; --- Elevator arrival sounds and dialogue
+	"OnTrigger" "elevator_stop_soundPlaySound2-1"
+	"OnTrigger" "sound_elevator_arrivedPlaySound4-1"
+	"OnTrigger" "sound_elevator_arrivedStopSound10-1"
+	; --- Survivors call out the elevator arriving
+	"OnTrigger" "!activatorSpeakResponseConceptPlayerMoveOn5-1"
+	; --- Open the doors
+	"OnTrigger" "elevator_1_door1Open5-1"
+	"OnTrigger" "elevator_1_door2Open5-1"
+}
+modify:
+; --- Give a unique name to the relevant elevator arrow lights so we only change this one
+{
+	match:
+	{
+		"hammerid" "330225"
+	}
+	replace:
+	{
+		"targetname" "call_elevator_lights"
+	}
+}
+; --- Add a glow to the button when hitting a trigger just before the elevator room, and limit trigger to survivors
+{
+	match:
+	{
+		"hammerid" "4029721"
+		"origin" "1728 5736 2528"
+	}
+	insert:
+	{
+		"filtername" "filter_survivor"
+		"OnStartTouch" "call_elevator_button_propStartGlowing0-1"
+	}
+}
+; --- Force the elevator doors to open after 20 seconds after reaching the ground floor (from when the door unlocks)
 modify:
 {
 	match:
@@ -17,7 +109,7 @@ modify:
 	}
 	insert:
 	{
-		"OnTrigger" "elevator_door_button1Press34-1"
+		"OnTrigger" "elevator_door_button1Press24-1"
 	}
 }
 
@@ -73,6 +165,17 @@ add:
 	"classname" "weapon_ammo_spawn"
 	"origin" "1011 5268 2686"
 	"angles" "0 90 0"
+	"model" "models/props/terror/ammo_stack.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"spawnflags" "2"
+	"count" "5"
+}
+; --- Ammo pile in room before the elevator
+{
+	"classname" "weapon_ammo_spawn"
+	"origin" "1827 5258 2464"
+	"angles" "0 210 0"
 	"model" "models/props/terror/ammo_stack.mdl"
 	"solid" "6"
 	"disableshadows" "1"
@@ -238,6 +341,11 @@ add:
 ; ==                 NUISANCE CHANGES                ==
 ; ==      Clipping improvements, QOL map changes     ==
 ; =====================================================
+; --- Remove window by elevator that prevents death charges and ledge hangs
+filter:
+{
+	"hammerid" "2536550"
+}
 
 
 ; ###########  ADDITIONAL PROPS AND SPAWNS  ###########
@@ -325,6 +433,15 @@ add:
 	"origin" "2410 6475 2656"
 	"angles" "0 180 0"
 	"model" "models/props_urban/hotel_stair_rail003.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+; --- Props in room before elevator for spawns
+{
+	"classname" "prop_dynamic"
+	"origin" "1998 5517 2464"
+	"angles" "0 270 0"
+	"model" "models/props_equipment/snack_machine2.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 }
