--- a/cfg/stripper/maps/c1m2_streets.cfg
+++ b/cfg/stripper/maps/c1m2_streets.cfg
@@ -462,6 +462,24 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 }
+; --- Add some dense trees to help players see its blocked
+{
+	"classname" "prop_dynamic"
+	"origin" "-4582 1476 441"
+	"angles" "0 15 0"
+	"model" "models/props_foliage/urban_trees_dryleaves01_dense.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+}
+; --- Block standing on the hedge before the walkway
+{
+	"classname" "env_physics_blocker"
+	"origin" "-4821 1727 1003"
+	"mins" "-124 -17 -469.5"
+	"maxs" "124 17 469.5"
+	"initialstate" "1"
+	"BlockType" "1"
+}
 ; --- Block climbing up the generators before the walkway
 {
 	"classname" "env_physics_blocker"
