--- a/cfg/stripper/maps/c2m2_fairgrounds.cfg
+++ b/cfg/stripper/maps/c2m2_fairgrounds.cfg
@@ -67,8 +67,20 @@ add:
 ; ==                 HITTABLE CHANGES                ==
 ; ==           Add/remove/modify hittables           ==
 ; =====================================================
-; --- Tweak the position of the forklift at the start
+; --- Move a dumpster at the start of the map to a more viable location, and provide a hittable option for the opened scavenge area
 modify:
+{
+	match:
+	{
+		"hammerid" "316196"
+	}
+	replace:
+	{
+		"origin" "884 1664 0.250002"
+		"angles" "0 0 0"
+	}
+}
+; --- Tweak the position of the forklift at the start
 {
 	match:
 	{
@@ -326,6 +338,31 @@ add:
 	"origin" "2752 -1547 194"
 	"mins" "-72 -12 -46"
 	"maxs" "72 12 46"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+; --- Block survivors from getting on the warehouse roof
+{
+	"classname" "env_physics_blocker"
+	"origin" "2048 -1024 519"
+	"mins" "-1040 -544 -249"
+	"maxs" "1040 544 249"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "2752 -420 496"
+	"mins" "-320 -60 -272"
+	"maxs" "320 60 272"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "1728 -432 468"
+	"mins" "-704 -48 -300"
+	"maxs" "704 48 300"
 	"initialstate" "1"
 	"BlockType" "1"
 }
@@ -865,52 +902,35 @@ modify:
 ; ==       New props for balance and SI spawns       ==
 ; =====================================================
 add:
-; --- Carnival sign on the closed building next to the peanut gallery
+; --- Carnival sign on the closed game building next to the peanut gallery
 {
 	"classname" "prop_dynamic"
 	"origin" "2720 -80 202"
 	"angles" "0 180 0"
 	"model" "models/props_urban/carnival_sign003.mdl"
-	"solid" "0"
+	"solid" "6"
 	"disableshadows" "1"
 	"rendercolor" "22 202 254"
 }
-; --- Collision for sign since the model lacks any
+; --- Add collision to sign and block LOS 
 {
-	"classname" "prop_dynamic"
-	"origin" "2674 -82 235"
-	"angles" "-90 90 0"
-	"model" "models/props_highway/plywood_01.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-	"rendermode" "10"
+	"classname" "logic_auto"
+	"OnMapSpawn" "anv_mapfixes_losfix_gamehut_signAddOutputmins -104 -2 -340-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_gamehut_signAddOutputmaxs 104 2 340-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_gamehut_signAddOutputsolid 20-1"
 }
 {
-	"classname" "prop_dynamic"
-	"origin" "2721 -82 235"
-	"angles" "-90 90 0"
-	"model" "models/props_highway/plywood_01.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-	"rendermode" "10"
+	"classname" "func_brush"
+	"origin" "2720 -82 208"
+	"targetname" "anv_mapfixes_losfix_gamehut_sign"
 }
 {
-	"classname" "prop_dynamic"
-	"origin" "2768 -82 235"
-	"angles" "-90 90 0"
-	"model" "models/props_highway/plywood_01.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-	"rendermode" "10"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "2815 -82 235"
-	"angles" "-90 90 0"
-	"model" "models/props_highway/plywood_01.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-	"rendermode" "10"
+	"classname" "env_physics_blocker"
+	"origin" "2720 -82 209"
+	"mins" "-104 -2 -34"
+	"maxs" "104 2 34"
+	"initialstate" "1"
+	"BlockType" "0"
 }
 ; --- Clipping on sign support
 {
@@ -998,6 +1018,48 @@ add:
 	"origin" "2656 -1840 84"
 	"mins" "-62 -18 -3"
 	"maxs" "62 18 3"
+	"initialstate" "1"
+	"BlockType" "2"
+}
+; --- AC vent on the warehouse roof for spawns and to get on the upper roof section
+{
+	"classname" "prop_dynamic"
+	"origin" "1484 -886 341"
+	"angles" "0 0 0"
+	"model" "models/props_rooftop/acvent03.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+; --- Clipping to help with jumping on the AC vent
+{
+	"classname" "env_physics_blocker"
+	"origin" "1486 -887 354"
+	"mins" "-37.5 -36.5 -4"
+	"maxs" "37.5 36.5 4"
+	"initialstate" "1"
+	"BlockType" "2"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "1486 -887 404"
+	"mins" "-32.5 -33.5 -4"
+	"maxs" "32.5 33.5 4"
+	"initialstate" "1"
+	"BlockType" "2"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "1517 -887 461"
+	"mins" "-2 -27 -6"
+	"maxs" "2 27 6"
+	"initialstate" "1"
+	"BlockType" "2"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "1519 -900 471"
+	"mins" "-2 -14 -6"
+	"maxs" "2 14 6"
 	"initialstate" "1"
 	"BlockType" "2"
 }
@@ -1491,6 +1553,17 @@ filter:
 ; ==              Add or change ladders              ==
 ; =====================================================
 add:
+; --- Infected ladder in the center of the wall by the game buildings, on the scavenge area side
+{
+	"classname" "func_simpleladder"
+	"origin" "1.5 -310 0"
+	"angles" "0 0 0"
+	"model" "*90"
+	"normal.x" "-1.00"
+	"normal.y" "0.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
 ; --- Infected ladder out of bounds behind the refreshments building at the start
 {
 	"classname" "func_simpleladder"
@@ -1754,69 +1827,43 @@ add:
 	"origin" "1703 2728 173"
 	"angles" "0 0 0"
 	"model" "models/props_fairgrounds/concession_sign_01.mdl"
-	"solid" "0"
-	"disableshadows" "1"
-}
-; --- Add plywood inside sign because it has no collision
-{
-	"classname" "prop_dynamic"
-	"origin" "1732 2672 162"
-	"angles" "90 180 0"
-	"model" "models/props_highway/plywood_01.mdl"
 	"solid" "6"
 	"disableshadows" "1"
-	"rendermode" "10"
+}
+; --- Add collision to sign and block LOS 
+{
+	"classname" "logic_auto"
+	"OnMapSpawn" "anv_mapfixes_losfix_saferoom_signAddOutputmins -2 -104 -450-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_saferoom_signAddOutputmaxs 2 104 450-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_saferoom_signAddOutputsolid 20-1"
 }
 {
-	"classname" "prop_dynamic"
-	"origin" "1732 2707 162"
-	"angles" "90 180 0"
-	"model" "models/props_highway/plywood_01.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-	"rendermode" "10"
+	"classname" "func_brush"
+	"origin" "1732 2728 192"
+	"targetname" "anv_mapfixes_losfix_saferoom_sign"
 }
 {
-	"classname" "prop_dynamic"
-	"origin" "1732 2745 162"
-	"angles" "90 180 0"
-	"model" "models/props_highway/plywood_01.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-	"rendermode" "10"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "1732 2792 162"
-	"angles" "90 180 0"
-	"model" "models/props_highway/plywood_01.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-	"rendermode" "10"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "1732 2832 162"
-	"angles" "90 180 0"
-	"model" "models/props_highway/plywood_01.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-	"rendermode" "10"
+	"classname" "env_physics_blocker"
+	"origin" "1732 2728 193"
+	"mins" "-2 -104 -45"
+	"maxs" "2 104 45"
+	"initialstate" "1"
+	"BlockType" "0"
 }
 ; --- Clip ramp behind sign
 {
 	"classname" "env_physics_blocker"
-	"origin" "1702 2727 198"
+	"origin" "1702 2728 198"
 	"angles" "-45 0 0"
-	"mins" "-40 -105.5 -1"
-	"maxs" "40 105.5 1"
-	"boxmins" "-40 -105.5 -1"
-	"boxmaxs" "40 105.5 1"
+	"mins" "-40 -106.5 -1"
+	"maxs" "40 106.5 1"
+	"boxmins" "-40 -106.5 -1"
+	"boxmaxs" "40 106.5 1"
 	"initialstate" "1"
 	"BlockType" "0"
 }
 ; --- Concrete walls on roof
-; Set 1
+; --- Set 1
 {
 	"classname" "prop_dynamic"
 	"origin" "1659 2594 169"
@@ -1887,7 +1934,7 @@ add:
 	"disablereceiveshadows" "1"
 	"rendercolor" "140 192 221"
 }
-; Set 2
+; --- Set 2
 {
 	"classname" "prop_dynamic"
 	"origin" "1569 2594 169"
@@ -1958,7 +2005,7 @@ add:
 	"disablereceiveshadows" "1"
 	"rendercolor" "140 192 221"
 }
-; Wall 1 - Top
+; --- Wall 1 - Top
 {
 	"classname" "prop_dynamic"
 	"origin" "1656.95 2570.05 164.95"
@@ -1979,7 +2026,7 @@ add:
 	"disablereceiveshadows" "1"
 	"rendercolor" "140 192 221"
 }
-; Wall 1 - Bottom
+; --- Wall 1 - Bottom
 {
 	"classname" "prop_dynamic"
 	"origin" "1657 2570 156"
@@ -2000,7 +2047,7 @@ add:
 	"disablereceiveshadows" "1"
 	"rendercolor" "140 192 221"
 }
-; Wall 2 - Top
+; --- Wall 2 - Top
 {
 	"classname" "prop_dynamic"
 	"origin" "1740.95 2578 164.95"
@@ -2051,7 +2098,7 @@ add:
 	"disablereceiveshadows" "1"
 	"rendercolor" "140 192 221"
 }
-; Wall 2 - Bottom
+; --- Wall 2 - Bottom
 {
 	"classname" "prop_dynamic"
 	"origin" "1741 2578 156"
@@ -2149,4 +2196,152 @@ add:
 	"normal.y" "0.24"
 	"normal.z" "0.00"
 	"team" "2"
+}
+
+; =====================================================
+; ==                CUT SCAVENGE AREA                ==
+; ==         Open up an area before kiddyland        ==
+; =====================================================
+; --- Remove the fence at the ramp leading to kiddyland
+filter:
+; --- Clipbrush
+{
+	"hammerid" "3171799"
+}
+; --- Fence props
+{
+	"hammerid" "130846"
+}
+{
+	"hammerid" "130957"
+}
+; --- Nav blocker
+{
+	"hammerid" "3747548"
+}
+; --- EXPLOITS
+add:
+; --- Block survivors from getting on the game buildings
+{
+	"classname" "env_physics_blocker"
+	"origin" "1472 0 444"
+	"mins" "-194 -162 -324"
+	"maxs" "194 162 324"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "1472 640 444"
+	"mins" "-162 -194 -324"
+	"maxs" "162 194 324"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+; --- PROPS
+add:
+; --- Add a sign to one of the buildings to help with spawning
+{
+	"classname" "prop_dynamic"
+	"origin" "1472 53 178"
+	"angles" "0 90 0"
+	"model" "models/props_fairgrounds/concession_sign_02.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+; --- Clipping on sign supports
+{
+	"classname" "env_physics_blocker"
+	"origin" "1472 52 206"
+	"angles" "0 0 45"
+	"mins" "-99 -40 -1"
+	"maxs" "99 40 1"
+	"boxmins" "-99 -40 -1"
+	"boxmaxs" "99 40 1"
+	"initialstate" "1"
+	"BlockType" "2"
+}
+; --- Add an additional vent on the rides building, in line with the vent added by TLS
+{
+	"classname" "prop_dynamic"
+	"origin" "923 900 222"
+	"angles" "0 0 0"
+	"model" "models/props_rooftop/acvent03.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+; --- Fix the placement of the plastic table and chairs
+modify:
+{
+	match:
+	{
+		"hammerid" "316299"
+	}
+	replace:
+	{
+		"origin" "960 896.638 2"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "316303"
+	}
+	replace:
+	{
+		"origin" "964.183 952 2"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "316307"
+	}
+	replace:
+	{
+		"origin" "985.459 865.531 2"
+	}
+}
+; --- ITEMS
+add:
+; --- Add deagle and melee spawns to new area
+{
+	"classname" "weapon_spawn"
+	"origin" "2326 -274 33"
+	"angles" "0 259.5 -90"
+	"weapon_selection" "weapon_pistol_magnum"
+	"spawn_without_director" "1"
+	"solid" "6"
+	"disableshadows" "1"
+	"spawnflags" "2"
+	"count" "5"
+}
+{
+	"classname" "weapon_melee_spawn"
+	"origin" "1208 296 32"
+	"angles" "0 60 -90"
+	"melee_weapon" "any"
+	"spawn_without_director" "1"
+	"solid" "0"
+	"disableshadows" "1"
+	"spawnflags" "2"
+	"count" "1"
+}
+; --- Add a static scout spawn to the new area (if sniper is enabled, otherwise it will become an HR/ammo pile)
+{
+	"classname" "weapon_spawn"
+	"origin" "2323 -318 33"
+	"angles" "0 259.5 -90"
+	"weapon_selection" "weapon_sniper_scout"
+	"spawn_without_director" "1"
+	"solid" "6"
+	"disableshadows" "1"
+	"spawnflags" "2"
+	"count" "5"
+}
+; --- Add a potential pill spawn on one of the game buildings
+{
+	"classname" "weapon_pain_pills_spawn"
+	"origin" "1341 -74 42"
+	"angles" "0 0 0"
 }
